@@ -48,4 +48,4 @@ ANT_EXTRA_ARGS="$ANT_STAT_ARGS"
 
 LIBDSLDI_DIR="$SPOOFAX_DEBUG_DIR/../dist-libdsldi"
 ARGS="-lib $LIBDSLDI_DIR $ANT_EXTRA_ARGS -Dstratego.spoofax.debug.library.base=$LIBDSLDI_DIR"
-ANT_OPTS="-Xss8m -server -XX:+UseParallelGC" ant -f build.main.external.xml $ARGS "$@"
+ANT_OPTS="-Xss8m -Xmx1024m -server -XX:+UseParallelGC -XX:MaxPermSize=256m" ant -f build.main.external.xml $ARGS "$@"
